--- a/src/UI/Slides/HomeSlide/HomeSlide.scss
+++ b/src/UI/Slides/HomeSlide/HomeSlide.scss
@@ -21,8 +21,10 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 0;
   right: 0;
+  left: 0;
+  opacity: 1;
+  transition: transform 0.2s, opacity 0.2s;
 }
 
 .mainTextContainer {
