--- a/src/components/pageComponents/home/Header/Header.module.scss
+++ b/src/components/pageComponents/home/Header/Header.module.scss
@@ -12,5 +12,6 @@
     .iconContainer {
         margin-right: 30px;
         cursor: pointer;
+        box-shadow: 5px 5px 15px -5px #000000;
     }
 }
