feat: Added multiple meta tags to improve SEO sores

--- a/styles/variables.module.scss
+++ b/styles/variables.module.scss
@@ -4,6 +4,7 @@ $primary-color-dark-accent-1: #1E1D2A;
 $primary-icon-color-dark: #FB8B24;
 $primary-text-color-dark-background: #E6E6E6;
 $primary-placeholder-text-color-dark-background: #898989;
+$primary-color-dark-error-accent-1: #862A24;
 
 // device sizes
 $phone: 599px;
