--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Merriweather+Sans&family=Source+Code+Pro&display=swap');
+//@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Merriweather+Sans&family=Source+Code+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Merriweather+Sans:wght@300&family=Source+Code+Pro&display=swap');
 
 @import "variables.module.scss";
 
