--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -25,7 +25,7 @@
       color: $primary-text-color-dark-background;
       margin: 0;
       padding: 20px 0;
-      font-family: 'Merriweather', serif;
+      font-family: 'Merriweather Sans', sans-serif;
 
       @include for-tablet-portrait-up {
         font-size: 20px;
@@ -37,7 +37,7 @@
       color: $primary-text-color-dark-background;
       margin: 0;
       padding: 0;
-      font-family: 'Merriweather Sans', sans-serif;
+      font-family: 'Merriweather', sans-serif;
 
       @include for-tablet-landscape-up {
         font-size: 90px;
