--- a/src/components/Notification/Notification.module.scss
+++ b/src/components/Notification/Notification.module.scss
@@ -2,17 +2,36 @@
 @import './styles/mixins';
 @import './styles/mediaQueryMixins';
 
-.notificationContainer {
+.notificationParentWrapper {
+  display: flex;
+  justify-content: flex-end;
   position: fixed;
   bottom: -30px;
-  right: 30px;
+  left: 0;
+  right: 0;
+  transition: bottom 0.3s ease-in-out;
+  padding: 10px 40px;
+
+  @include for-phone-only {
+    justify-content: center;
+  }
+
+  @include for-tablet-portrait-up {
+    align-items: flex-end;
+  }
+}
+
+.notificationContainer {
   @include flexCentered;
   background-color: $primary-color-dark-error-accent-1;
   box-shadow: $common-box-shadow;
   border-radius: 10px;
   padding: 12px;
+  width: fit-content;
 
-  transition: bottom 0.3s ease-in-out;
+  @include for-phone-only {
+    padding: 8px;
+  }
 }
 
 .notificationText {
@@ -23,5 +42,6 @@
 
   @include for-phone-only {
     font-size: 12px;
+    margin: 0 0 0 8px;
   }
 }
