Improved SEO scores and Handle commands (#30)
* feat: made minor padding adjustment in the command prompt to align it better

* feat: Added multiple meta tags to improve SEO sores

* feat: updated readme

* feat: added command handling

* feat: ensured notifications are centered on mobile devices

--- a/src/components/pageComponents/home/CommandPrompt/CommandPrompt.module.scss
+++ b/src/components/pageComponents/home/CommandPrompt/CommandPrompt.module.scss
@@ -5,7 +5,7 @@
 .commandPromptContainer {
   height: 80px;
   border-radius: 10px;
-  box-shadow: 5px 5px 15px -5px #000000;
+  box-shadow: $common-box-shadow;
   background-color: $primary-color-dark-accent-1;
   width: 100%;
   cursor: text;
@@ -31,10 +31,12 @@
     font-size: 2.4vw;
     font-family: 'Source Code Pro', monospace;
     outline: none;
+    padding-bottom: 4px;
 
     @include for-phone-only {
       font-size: 12px;
       margin-left: 4px;
+      padding-bottom: 2px;
     }
 
     @include for-tablet-landscape-up {
